[build-system]
requires      = ["setuptools>=69.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynettools"
version = "0.0.1"
description = "Herramientas de redes en Python para el módulo SSF"
readme = "README.md"
authors = [
    { name = "fvarrui", email = "fvarrui@canariaseducacion.es" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Network :: Networking Tools",
    "Learning :: Learning Tools"
]
keywords = ["net", "network", "tools", "learning" ]
dependencies = [
    "psutil==5.9.8",
    "scapy==2.5.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/dam-ssf/pynettools"

[project.scripts]
calc_subnet = "commands.calc_subnet:main"
get_netmask = "commands.get_netmask:main"
get_network = "commands.get_network:main"
ip_to_bin = "commands.ip_to_bin:main"
list_nics = "commands.list_nics:main"
mac_vendor = "commands.mac_vendor:main"
which_network = "commands.which_network:main"
web_server = "commands.web_server:main"
